fixed navbar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,21 @@ body {
 nav {
     background-color: black;
     color: white;
-    padding: 15px;
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav h1 {
     margin: 0;
 }
 
-section {
-    padding: 40px;
-}
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 nav ul {
     display: flex;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav li {
